# magicalos

./: .gitignore  .gitmodules  Cargo.toml  README.md  compiler_commands.json  font.psf2  grub.cfg  limine.conf  linker.ld  run.sh  shell.nix  ter-u32n.psf  test.py  todo.md  x86_64-magicalos.json  x86_64.json
kernel/: Cargo.toml  build.rs
kernel/.cargo/: config.toml
kernel/src/: acpi.rs  apic.rs  auxvec.rs  elf.rs  errno.rs  gdt.rs  hpet.rs  ioapic.rs  kernel.rs  lib.rs  limine_requests.rs  macros.rs  main.rs  msr.rs  port.rs  processor.rs  qemu_debug.rs  scheduler.rs  serial.rs  terminal.rs  testing.rs  thread.rs  utils.rs  vga_buffer.rs  volatile.rs
kernel/src/arch/: apic.rs  gdt.rs  hpet.rs  ioapic.rs  mod.rs  processor.rs
kernel/src/async_rt/: executor.rs  mod.rs  timer.rs  waker.rs
kernel/src/bus/: acpi.rs  mod.rs  pci.rs  serial.rs
kernel/src/drivers/: keyboard.rs  mod.rs  serial.rs  terminal.rs
kernel/src/elf/: loader.rs  mod.rs
kernel/src/fd/: generic.rs  mod.rs
kernel/src/fs/: data_handle.rs  file.rs  mod.rs  tar.rs  vfs.rs
kernel/src/graphics/: framebuffer.rs  mod.rs  psf2.rs
kernel/src/interrupts/: handlers.rs  idt.rs  macros.rs  mod.rs  table.rs
kernel/src/io/: acpi.rs  apic.rs  error.rs  mod.rs  pci.rs  qemu_debug.rs
kernel/src/memory/: bitmapframealloc.rs  mod.rs  tinyalloc.rs  vmm.rs  vmspace.rs
kernel/src/scheduler/: mod.rs  sched.rs  task.rs
kernel/src/synch/: mod.rs  mutex.rs  spinlock.rs
kernel/src/syscall/: arch_prctl.rs  clock.rs  close.rs  empty.rs  exit.rs  mkdir.rs  mmap.rs  mod.rs  open.rs  read.rs  seek.rs  sleep.rs  (+2 more)
(+56 files in other folders)
